// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`aas schema (0) match fails for invalid config -> empty: empty 1`] = `
"expect(received).toMatchSchema(schema)

received
  must have required property 'AASId, GlobalAssetId'
    Path:     AAS.schema.json#/required
"
`;

exports[`aas schema (1) match fails for invalid config -> AASId is missing: AASId is missing 1`] = `
"expect(received).toMatchSchema(schema)

received
  must have required property 'AASId, GlobalAssetId'
    Path:     AAS.schema.json#/required
"
`;

exports[`aas schema (2) match fails for invalid config -> GlobalAssetId is missing: GlobalAssetId is missing 1`] = `
"expect(received).toMatchSchema(schema)

received
  must have required property 'AASId, GlobalAssetId'
    Path:     AAS.schema.json#/required
"
`;

exports[`aas schema (3) match fails for invalid config -> wrong AASId type: wrong AASId type 1`] = `
"expect(received).toMatchSchema(schema)

received
  must have required property 'AASId, GlobalAssetId'
    Path:     AAS.schema.json#/required
  /GlobalAssetId must be string
    Received: <number> 50
    Path:     AAS.schema.json#/properties/GlobalAssetId/type
"
`;

exports[`aas schema (4) match fails for invalid config -> wrong GlobalAssetId type: wrong GlobalAssetId type 1`] = `
"expect(received).toMatchSchema(schema)

received
  must have required property 'AASId, GlobalAssetId'
    Path:     AAS.schema.json#/required
  /AASId must be string
    Received: <number> 20
    Path:     AAS.schema.json#/properties/AASId/type
"
`;
